@@ -12,9 +12,10 @@ For more details, please see the README file.
 
 
 , 2024, AnnotSV version 3.4.3
+	- New definition of alias gene symbols used in OMIM annotation files. 
+	  Keep only aliases found with the NCBI_gene_ID and validated with genomic locations
 	- Add a new check for the variantconvert configuration (issue 246)
 	- Fix a bug in the AnnotSV_ID setting when POS (e.g. 1) is contained in CHROM (e.g. 1)
-	- Add alias gene symbols in the OMIM annotations file
 
 May, 14, 2024, AnnotSV version 3.4.2
 	- Fix a bug when setting the cytoband annotation for large SV (issue 234)
